--- a/index.html
+++ b/index.html
@@ -340,8 +340,8 @@
 
 
     <h4>
-        <a href="" target="_blank">🏡</a>
-        <a href="https://kimjiwoow.github.io/la2page/" target="_blank" class="gift">🎁</a>
+        <a href="https://kimjiwoow.github.io/1page11/" target="_blank">🏡</a>
+        <a href="" target="_blank" class="gift">🎁</a>
     </h4>
 
 
