--- a/index.html
+++ b/index.html
@@ -341,7 +341,7 @@
 
     <h4>
         <a href="https://kimjiwoow.github.io/1page11/" target="_blank">🏡</a>
-        <a href="" target="_blank" class="gift">🎁</a>
+        <a href="https://kimjiwoow.github.io/1page11/" target="_blank" class="gift">🎁</a>
     </h4>
 
 
